# esp-discord

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  certgen.sh  discord.c  discord.h  discord_gateway.c  discord_gateway.h  discord_gateway_heartbeat.c  discord_gateway_heartbeat.h  discord_models.c  discord_models.h  discord_models_private.c  discord_models_private.h  idf_component.yml
.github/workflows/: publish.yaml  validate.yaml
examples/echo/: CMakeLists.txt  README.md
examples/echo/main/: CMakeLists.txt  echo.c  idf_component.yml
include/: discord.h  discord_ota.h
include/discord/: attachment.h  channel.h  embed.h  emoji.h  guild.h  member.h  members.h  message.h  message_reaction.h  messages.h  models.h  role.h  roles.h  session.h  user.h  users.h  utils.h  voice_state.h
include/discord/models/: emoji.h  member.h  message.h  message_reaction.h  role.h  session.h  user.h
include/discord/private/: _api.h  _discord.h  _gateway.h  _json.h  _models.h
include/helpers/: cutils.h  estr.h
include/private/: discord_models_private.h
src/: discord.c  discord_models.c  discord_models_private.c  discord_ota.c
src/discord/: attachment.c  channel.c  embed.c  emoji.c  guild.c  member.c  members.c  message.c  message_reaction.c  messages.c  models.c  role.c  roles.c  session.c  user.c  users.c  utils.c  voice_state.c
src/discord/models/: emoji.c  member.c  message.c  message_reaction.c  role.c  session.c  user.c
src/discord/private/: _api.c  _discord.c  _gateway.c  _json.c  _models.c  models.c
src/helpers/: estr.c
test/: CMakeLists.txt  test_login.c
